fix ₽ on iOS and arrow on prod

--- a/src/sass/_vars.sass
+++ b/src/sass/_vars.sass
@@ -1,6 +1,6 @@
 // Fonts
-$font: "Lato", sans-serif
-$roboto-font: "Roboto", sans-serif
+$font: -apple-system, "Lato", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
+$roboto-font: -apple-system, Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 
 // Colors
 $black: #000
